--- a/Complex JSON/Info.plist
+++ b/Complex JSON/Info.plist
@@ -51,6 +51,8 @@
 	<string>Snapgroup</string>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
+    <key>FirebaseScreenReportingEnabled</key>
+    <false/>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSApplicationQueriesSchemes</key>
